# revive

./: BUILD.bazel  WORKSPACE
fixtures/: BUILD.bazel
fixtures/golint/: BUILD.bazel
formatter/: BUILD.bazel
lint/: BUILD.bazel
rule/: BUILD.bazel
test/: BUILD.bazel  golint_test.go
