load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/mgechev/revive
gazelle(name = "gazelle")

# Files in the fixtures directory are used as inputs in tests only.
# gazelle:exclude fixtures

go_library(
    name = "go_default_library",
    srcs = [
        "config.go",
        "main.go",
    ],
    importpath = "github.com/mgechev/revive",
    visibility = ["//visibility:private"],
    deps = [
        "//formatter:go_default_library",
        "//lint:go_default_library",
        "//rule:go_default_library",
        "@com_github_burntsushi_toml//:go_default_library",
        "@com_github_fatih_color//:go_default_library",
        "@com_github_mgechev_dots//:go_default_library",
    ],
)

go_binary(
    name = "revive",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
