load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "add-constant.go",
        "argument-limit.go",
        "atomic.go",
        "blank-imports.go",
        "bool-literal-in-expr.go",
        "confusing-naming.go",
        "confusing-results.go",
        "constant-logical-expr.go",
        "context-as-argument.go",
        "context-keys-type.go",
        "cyclomatic.go",
        "deep-exit.go",
        "dot-imports.go",
        "empty-block.go",
        "empty-lines.go",
        "error-naming.go",
        "error-return.go",
        "error-strings.go",
        "errorf.go",
        "exported.go",
        "file-header.go",
        "flag-param.go",
        "function-result-limit.go",
        "get-return.go",
        "if-return.go",
        "imports-blacklist.go",
        "increment-decrement.go",
        "indent-error-flow.go",
        "max-public-structs.go",
        "modifies-param.go",
        "modifies-value-receiver.go",
        "package-comments.go",
        "range.go",
        "range-val-in-closure.go",
        "receiver-naming.go",
        "redefines-builtin-id.go",
        "struct-tag.go",
        "superfluous-else.go",
        "time-naming.go",
        "unexported-return.go",
        "unnecessary-stmt.go",
        "unreachable-code.go",
        "unused-param.go",
        "utils.go",
        "var-declarations.go",
        "var-naming.go",
        "waitgroup-by-value.go",
    ],
    importpath = "github.com/mgechev/revive/rule",
    visibility = ["//visibility:public"],
    deps = [
        "//lint:go_default_library",
        "@com_github_fatih_structtag//:go_default_library",
    ],
)
